# copilot-finance

./: .env  .env.example  LICENSE  README.md  dfx.json  package-lock.json
agent/: Cargo.toml  agent.did
agent/src/: lib.rs
backend/: Cargo.toml  backend.did  lib.rs  types.rs  utils.rs
backend/tests/: account_tests.rs  pocketic.rs  utils_tests.rs
frontend/: package.json
frontend/src/: main.jsx
frontend/src/components/: aboutSection.tsx  chatWindow.tsx  connectButton.tsx  documentationSection.tsx  landingPage.tsx  navbar.tsx  productsSection.tsx  sidebar.tsx
frontend/src/helper/: usePlug.ts
mock_ledger/: Cargo.toml  mock_ledger.did
mock_ledger/src/: lib.rs
registry/: Cargo.toml  registry.did
registry/src/: lib.rs
src/declarations/backend/: backend.did.d.ts  backend.did.js
