[package]
name = "agent"
version = "0.1.0"
edition = "2021"
regex = "1"
[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.14"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
data-encoding = "2"
ic-llm = "*"   # pakai versi yang kamu pakai sekarang
